Modification dashboard page.
